--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.1.3",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
+    "react-moment": "^1.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
